add remember css

--- a/css/login.css
+++ b/css/login.css
@@ -91,7 +91,7 @@ input::placeholder{
     color: var(--primary-color);
 }
 
-.opttions {
+.options {
     display: flex;
     align-items: center;
     justify-content: space-between;
